--- a/css/grid布局2.html
+++ b/css/grid布局2.html
@@ -14,7 +14,7 @@
 			<div class="grid-box-1 gridSpan"> 6  grid-column: 2 / span 2; grid-row: 3 / span 2; (span 是合并几个网格) height: 150px; width: 200px; align-self: center; justify-self: center; </div>
 			<div class="grid-box-1 gridAlign"> 7 grid-row: 3 / 5; height: 35px; align-self: flex-end;</div>
 			<div class="grid-box-1 gridColumn"> 8    grid-column: 1 / 5; 主要是与上面区分 </div>
-			<div class="grid-box-1"> 9 </div>
+			<div class="grid-box-1"> display:inline-grid 内联网格线 </div>
 			<div class="grid-box-1"> 11 </div>
 			<div class="grid-box-1"> 12 </div>
 			<div class="grid-box-1"> 13 </div>
