--- a/html/js丢失精度问题.html
+++ b/html/js丢失精度问题.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>js丢失精度问题</title>
+		<title>js丢失精度问题哇哇哇哇哇哇哇哇哇哇哇哇哇</title>
 	</head>
 	<style>
 		.test{
