--- a/html/轮播.html
+++ b/html/轮播.html
@@ -55,16 +55,16 @@
 		{name:'小红4',speck:'wobu xiang',img:'../img/1.jpg'},
 		{name:'小红5',speck:'你好可爱5',img:'../img/1.jpg'},
 		{name:'小红6',speck:'你好可dsaasd爱6',img:'../img/1.jpg'},
-//		{name:'小红8',speck:'你好可爱8',img:'../img/1.jpg'},
-//		{name:'小红9',speck:'你好可爱9',img:'../img/1.jpg'},
-//		{name:'小红10',speck:'你好可爱10',img:'../img/1.jpg'},
-//		{name:'小红11',speck:'你好可爱11',img:'../img/1.jpg'},
+		{name:'小红8',speck:'你好可爱8',img:'../img/1.jpg'},
+		{name:'小红9',speck:'你好可爱9',img:'../img/1.jpg'},
+		{name:'小红10',speck:'你好可爱10',img:'../img/1.jpg'},
+		{name:'小红11',speck:'你好可爱11',img:'../img/1.jpg'},
 	];
 	var oldContents = JSON.parse(JSON.stringify(contents));
 	var barrageRow;//行数   随机数1~5
 	var barrageRowArry = [];//每行 显示的类容
 	if(contents.length>5){
-		barrageRow =2 + Math.ceil(Math.random()*3);
+		barrageRow = 2 + Math.ceil(Math.random()*3);
 	}else{
 		barrageRow = contents.length;
 	}
@@ -85,14 +85,16 @@
 	//把数据组装到一行
 	for(var list=0;list<barrageRow;list++){
 		var clase = ".scorll-list .li"+ list +' p';
+		var num=0; //实际每行的个数
 		$('.scorll-list').append('<li class=li'+list+'><p></p></li>')
 		for(var listChild=0;listChild<barrageNum;listChild++){
 			if(barrageRowArry[list][listChild]){
+				num++
 				$(clase).append('<img src='+ barrageRowArry[list][listChild].img +'><span>' + barrageRowArry[list][listChild].name + '：' + barrageRowArry[list][listChild].speck + '</span>&nbsp;&nbsp;')
 			}
 		}
-		$(clase).css('width',$(clase).css('width'))
-		$(clase).css('right','-'+ (parseInt($(clase).css('width')) + Math.ceil(Math.random()*100)) + 'px')
+		$(clase).css('width',240*num +'px') //每行宽度
+		$(clase).css('right','-'+ (parseInt($(clase).css('width')) + Math.ceil(Math.random()*200)) + 'px')
 		scorll(list);
 	}
 	//弹幕  js
